fix(editor): align template content vertially

--- a/packages/default/scss/editor/_layout.scss
+++ b/packages/default/scss/editor/_layout.scss
@@ -67,6 +67,7 @@
 
         li {
             display: inline-flex;
+            align-items: center;
             vertical-align: middle;
         }
 
